--- a/Build_Mate_be/package.json
+++ b/Build_Mate_be/package.json
@@ -13,6 +13,7 @@
     "axios": "^1.6.8",
     "cors": "^2.8.5",
     "express": "^4.19.2",
+    "mongodb": "^6.5.0",
     "mongoose": "^8.3.0",
     "nodemon": "^3.1.0"
   }
