--- a/Build_Mate_be/package.json
+++ b/Build_Mate_be/package.json
@@ -11,10 +11,11 @@
   "license": "ISC",
   "dependencies": {
     "axios": "^1.6.8",
+    "body-parser": "^1.20.2",
     "cors": "^2.8.5",
     "express": "^4.19.2",
     "mongodb": "^6.5.0",
-    "mongoose": "^8.3.0",
+    "mongoose": "^8.3.2",
     "nodemon": "^3.1.0"
   }
 }
