--- a/Build_Mate_fe/package.json
+++ b/Build_Mate_fe/package.json
@@ -24,6 +24,7 @@
     "react-router-dom": "^6.22.3",
     "react-scripts": "^5.0.1",
     "styled-components": "^6.1.8",
+    "sweetalert2": "^11.10.8",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
