--- a/Build_Mate_fe/package.json
+++ b/Build_Mate_fe/package.json
@@ -17,7 +17,7 @@
     "firebase": "^9.20.0",
     "install": "^0.13.0",
     "jwt-decode": "^3.1.2",
-    "npm": "^9.6.5",
+    "npm": "^10.7.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-ellipsis-text": "^1.2.1",
@@ -27,7 +27,7 @@
     "react-otp-input": "^3.0.0",
     "react-redux": "^8.0.5",
     "react-router-dom": "^6.10.0",
-    "react-scripts": "5.0.1",
+    "react-scripts": "^5.0.1",
     "redux-persist": "^6.0.0",
     "styled-components": "^5.3.9",
     "timeago.js": "^4.0.2",
