Responsive Homepage and Loginpage

--- a/Build_Mate_fe/package.json
+++ b/Build_Mate_fe/package.json
@@ -19,6 +19,7 @@
     "jwt-decode": "^3.1.2",
     "npm": "^10.7.0",
     "react": "^18.2.0",
+    "react-countup": "^6.5.3",
     "react-dom": "^18.2.0",
     "react-ellipsis-text": "^1.2.1",
     "react-file-image-to-base64": "^1.0.1",
@@ -28,6 +29,7 @@
     "react-redux": "^8.0.5",
     "react-router-dom": "^6.10.0",
     "react-scripts": "^5.0.1",
+    "react-scroll-trigger": "^0.6.14",
     "redux-persist": "^6.0.0",
     "styled-components": "^5.3.9",
     "timeago.js": "^4.0.2",
