--- a/Build_Mate_fe/package.json
+++ b/Build_Mate_fe/package.json
@@ -20,6 +20,7 @@
     "jwt-decode": "^3.1.2",
     "npm": "^10.7.0",
     "react": "^18.2.0",
+    "react-adsense": "^0.1.0",
     "react-chat-engine": "^1.11.28",
     "react-countup": "^6.5.3",
     "react-dom": "^18.2.0",
